--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,20 @@ asgiref==3.4.1; python_version >= "3.6" \
 async-timeout==3.0.1; python_full_version >= "3.5.3" and python_version >= "3.6" \
     --hash=sha256:0c3c816a028d47f659d6ff5c745cb2acf1f966da1fe5c19c77a70282b25f4c5f \
     --hash=sha256:4291ca197d287d274d0b6cb5d6f8f8f82d434ed288f962539ff18cc9012f9ea3
+asyncpg==0.24.0; python_full_version >= "3.6.0" \
+    --hash=sha256:c4fc0205fe4ddd5aeb3dfdc0f7bafd43411181e1f5650189608e5971cceacff1 \
+    --hash=sha256:a7095890c96ba36f9f668eb552bb020dddb44f8e73e932f8573efc613ee83843 \
+    --hash=sha256:8ff5073d4b654e34bd5eaadc01dc4d68b8a9609084d835acd364cd934190a08d \
+    --hash=sha256:e36c6806883786b19551bb70a4882561f31135dc8105a59662e0376cf5b2cbc5 \
+    --hash=sha256:ddffcb85227bf39cd1bedd4603e0082b243cf3b14ced64dce506a15b05232b83 \
+    --hash=sha256:41704c561d354bef01353835a7846e5606faabbeb846214dfcf666cf53319f18 \
+    --hash=sha256:29ef6ae0a617fc13cc2ac5dc8e9b367bb83cba220614b437af9b67766f4b6b20 \
+    --hash=sha256:eed43abc6ccf1dc02e0d0efc06ce46a411362f3358847c6b0ec9a43426f91ece \
+    --hash=sha256:129d501f3d30616afd51eb8d3142ef51ba05374256bd5834cec3ef4956a9b317 \
+    --hash=sha256:a458fc69051fbb67d995fdda46d75a012b5d6200f91e17d23d4751482640ed4c \
+    --hash=sha256:556b0e92e2b75dc028b3c4bc9bd5162ddf0053b856437cf1f04c97f9c6837d03 \
+    --hash=sha256:a738f4807c853623d3f93f0fea11f61be6b0e5ca16ea8aeb42c2c7ee742aa853 \
+    --hash=sha256:dd2fa063c3344823487d9ddccb40802f02622ddf8bf8a6cc53885ee7a2c1c0c6
 blinker==1.4 \
     --hash=sha256:471aee25f3992bd325afa3772f1063dbdbbca947a041b8b89466dc00d606f8b6
 certifi==2021.5.30; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6" \
